# senior-os

./: README.md
demo/: README.md
demo/guiTemplate/: configActions.py  guiTemplate.py  main.py
documents/: zadani.md
sconf/: README.md  SMAIL_config.json  SWEB_config.json  TEMPLATE.json  config.json
sconf/images/: SMAIL_IMAGE_CREDITS.txt
sgive/: .gitignore  README.md
sgive/backup/: pyproject.toml
sgive/backup/old_gui_backup/: App.py
sgive/backup/src/graphical_interface/: App.py
sgive/backup/src/graphical_interface/JSON_conf/: config.json
sgive/backup/src/graphical_interface/ui_app/: GUI1.py
simg/: README.md  v4-Xpdf-Palemoon-420MB-LIVE.txt  v8-420MB-XorgFix-BootIMG.txt
sinst/: README.md  install_seniorOS.sh  uninstall_seniorOS.sh
sinst/smail/: main.py
sinst/srun/: .goutputstream-H1YMU1  main.py  mainConstants.json  user_data.json
sinst/stext/: .gitignore  README.md  filesToHomePage.txt  (+1 more)
smail/: .gitignore  README.md  app.py  config.json  credentials.json  email_address_config.json  layout.py  mail_connection.py  main.py  requirements.txt  style.py
srun/: Constants.json  Constants.py  README.md  literature.md  main.py  setConstant.py
ssec/: README.md  ssec.py  ssec.service  ssec_fedora.py
ssnd/: README.md
stext/: README.md  audioTTS.json  defaultStyleSheet.json  homePage.ui  main.py  main.ui  requirements.txt  saveAs.ui  saveAsDialog.py  translate.json
sweb/: MainBrowser.py  README.md  WebBrowserSenior_MagisterWork.py  homepage.html  languge_Translator.py  loadConfig.py  logPhishing.txt  style.css
theses/: README.md  theses.md
(+24 files in other folders)
