[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "seniorOS"
authors = [ { name = "RYUseless" } ]
description = "Application for seniors, developed fo <insert favorite linux distro>"
requires-python = ">=3.9"
license = {text = "MIT"}
#dependencies = ["os-sys"]
#here is some error -- fix later
dynamic = ["version"]
classifiers = ["Development Status :: 3 - Alpha"]

[project.scripts]
seniorOS = "graphical_interface.App:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ui_app*"]

[tool.setuptools.exclude-package-data]
"." = ["JSON_conf"]
